# zest-crawler

./: .gitignore  README.md  pyproject.toml  zest-crawler.spec
docs/: gui-portable-design.md
docs/plans/: 2026-03-06-geogebra-crawler-design.md  2026-03-06-geogebra-crawler-plan.md
scripts/: build_portable.py  debug_page.py
src/zest_crawler/: __init__.py  analyzer.py  cli.py  downloader.py  gui.py  models.py  router.py  storage.py
tests/: test_analyzer.py  test_cli.py  test_downloader.py  test_gui.py  test_integration.py  test_models.py  test_router.py  test_storage.py
