[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zest-crawler"
version = "0.1.0"
description = "GeoGebra resource crawler and downloader"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
zest-crawler = "zest_crawler.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zest_crawler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
